--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <script src="https://www.paypal.com/sdk/js?client-id=AfQDuhlth4Tu0iQk-GSsyDkBkyMiTvUO94gLTE87LML_Xmon6mdrj5eWVZ8Rov9adcdapuLwxsqEJXzx&enable-funding=paylater"></script>    
 
 
 </head>
