--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+ 
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -26,7 +27,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script src="https://www.paypal.com/sdk/js?client-id=AfQDuhlth4Tu0iQk-GSsyDkBkyMiTvUO94gLTE87LML_Xmon6mdrj5eWVZ8Rov9adcdapuLwxsqEJXzx&enable-funding=paylater"></script>    
-
+  <link rel="icon" href="./favicon.png" />
 
 </head>
 
